src-tauri/build_error.log
    Checking xml-reader v0.1.0 (C:\SANDBOX\REPOS\xml-reader\xml-reader\src-tauri)
error[E0432]: unresolved import `tauri::test`
    --> src\xml_ops.rs:506:17
     |
 506 |     use tauri::{test::mock_app, Manager};
     |                 ^^^^ could not find `test` in `tauri`
     |
note: found an item that was configured out
    --> C:\Users\daniel\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.10.2\src\lib.rs:1102:9
     |
1100 | #[cfg(any(test, feature = "test"))]
     |          ------------------------ the item is gated here
1101 | #[cfg_attr(docsrs, doc(cfg(feature = "test")))]
1102 | pub mod test;
     |         ^^^^

warning: unused import: `super::*`
   --> src\xml_ops.rs:504:9
    |
504 |     use super::*;
    |         ^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::io::Write`
   --> src\xml_ops.rs:505:9
    |
505 |     use std::io::Write;
    |         ^^^^^^^^^^^^^^

warning: unused import: `Manager`
   --> src\xml_ops.rs:506:33
    |
506 |     use tauri::{test::mock_app, Manager};
    |                                 ^^^^^^^

For more information about this error, try `rustc --explain E0432`.
warning: `xml-reader` (lib) generated 3 warnings
error: could not compile `xml-reader` (lib) due to 1 previous error; 3 warnings emitted
